# trackme-c

./: .gitignore  CMakeLists.txt  README.md  TODO.md
docker/: docker-compose.yml
lib/: ctemplate.c
src/: ctemplate.h  db.c  db.h  log.c  log.h  main.c  timer.c  timer.h  trackMeError.h  track_me.c  track_me.h  valueOrError.h  web.c  web.h
src/libgit2/lib/: libgit2.so.1.8  libgit2.so.1.8.0
src/libgit2/lib/pkgconfig/: libgit2.pc
src/util/: bson_list.c  bson_list.h  log.c  log.h
test/: integration_test.c  integration_test.h  test_db.c  test_db.h  test_list.c  test_list.h  test_main.c  test_main.h  test_timer.c  test_timer.h  test_trackme.c  test_trackme.h  unit_test.c  unit_test.h
util/: serve_web.sh
web/: script.js  style.css
web/templates/: edit_timer.tmpl  index.tmpl  start_timer.tmpl  stop_timer.tmpl  switch_entry.tmpl
